--- a/webpersonal/core/templates/core/contacto.html
+++ b/webpersonal/core/templates/core/contacto.html
@@ -1,19 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Portada</title>
-</head>
-<body>
-<h1>Mi web personal</h1>
-<ul>
-    <li><a href="/">Portada</a></li>
-    <li><a href="/about-me">Acerca de</a></li>
-    <li><a href="/portafolio">Portafolio</a></li>
-    <li><a href="/contacto">Contacto</a></li>
-</ul>
+{% extends 'core/base.html' %}
 
+{% block title %}Contacto{% endblock %}
+
+{% block content %}
 <h2>Contacto</h2>
 <p>Mi contacto es el jose.larosa6@unmsm.edu.pe</p>
-</body>
-</html>
+{% endblock %}
