--- a/webpersonal/core/templates/core/home.html
+++ b/webpersonal/core/templates/core/home.html
@@ -2,7 +2,12 @@
 
 {% block title %}Home{% endblock %}
 
+{% block background %}{% load static %}{% static 'core/img/home-bg.jpg' %}{% endblock %}
+
+{% block headers %}
+<h1>José La Rosa</h1>
+<span class="subheading">Ingeniero de Software</span>
+{% endblock %}
+
 {% block content %}
-<h2>Portada</h2>
-<p>Esto es la portada</p>
 {% endblock %}
