Antes de personalizar el panel de administrador
Video 025

--- a/webpersonal/core/templates/core/portafolio.html
+++ b/webpersonal/core/templates/core/portafolio.html
@@ -10,11 +10,10 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
   <!-- Proyecto -->
   <div class="row project">
     <div class="col-lg-3 col-md-4 offset-lg-1">
-          <img class="img-fluid" src="img/about-bg.jpg" alt="">
+          <img class="img-fluid" src={% static 'core/img/about-bg.jpg' %} alt="">
     </div>
     <div class="col-lg-7 col-md-8">
         <h2 class="section-heading title">Segundo proyecto</h2>
@@ -25,7 +24,7 @@
   <!-- Proyecto -->
   <div class="row project">
     <div class="col-lg-3 col-md-4 offset-lg-1">
-          <img class="img-fluid" src="img/home-bg.jpg" alt="">
+          <img class="img-fluid" src={% static 'core/img/home-bg.jpg' %} alt="">
     </div>
     <div class="col-lg-7 col-md-8">
         <h2 class="section-heading title">Primer proyecto</h2>
@@ -33,5 +32,4 @@
       <p><a href="http://google.com">Más información</a></p>
     </div>
   </div>
-</div>
 {% endblock %}
